<?xml version="1.0" encoding="utf-8"?>
<!--author: waylon -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black">

    <!-- Scrollable list of cancelled entrants -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/cancelledContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <!-- Notify Cancelled Entrants Button -->
    <Button
        android:id="@+id/btnNotifyCancelled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="Notify Cancelled Entrants"
        android:textColor="@color/white"
        android:backgroundTint="@color/pink_bg"
        android:fontFamily="@font/sfpro_semibold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
