<?xml version="1.0" encoding="utf-8"?>
<!--author: waylon -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black">

    <!-- Scrollable list of cancelled entrants -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/enrolledContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <!-- Notify Enrolled Entrants Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center">

        <!--Date picker-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNotifyEnrolled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Notify Enrolled Entrants"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/pink_bg"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExportCSV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Export CSV"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/pink_bg"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
