...
        android:textColor="@color/white"
        android:backgroundTint="@color/danger_red"
        android:fontFamily="@font/sfpro_semibold"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/btnSendNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="Notify Selected Entrants"
...
